@@ -298,6 +298,8 @@ Trunk (unreleased changes)
     HADOOP-5733. Add map/reduce slot capacity and blacklisted capacity to
     JobTracker metrics. (Sreekanth Ramakrishnan via cdouglas)
 
+    HADOOP-5596. Add EnumSetWritable. (He Yongqiang via szetszwo)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
